# experience-study-skill

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
core/: __init__.py  artifact_manifest.py  artifact_readiness.py  copilot_agent.py  fallback_planner.py  methodology_log.py  model_config.py  openai_compat.py  prerequisite_guard.py  response_formatter.py  session_state.py  skill_loader.py  workflow_status.py
docs/: data-privacy.md  improvement-plan.md  product-vision.md  roadmap.md  testing-checklist.md  trust-boundary.md
scripts/: generate_architecture_diagram.py
skills/: __init__.py
skills/experience_study_skill/: __init__.py  ae_math.py  ai_baselines.py  ai_cautions.py  ai_fallbacks.py  ai_models.py  ai_orchestrator.py  ai_packets.py  ai_sanitization.py  ai_skill_loader.py  ai_skill_renderer.py  ai_validation.py  feature_engineering.py  io.py  native_tools.py  schemas.py  skill.md  sweeps.py  validation.py  visualization.py
skills/experience_study_skill/actions/: analyze_count_amount_divergence.md  compare_cohorts.md  explain_cohort.md  summarize_sweep.md
tests/: __init__.py  conftest.py  test_ai_fallbacks.py  test_ai_packets.py  test_ai_validation.py  test_artifact_readiness.py  test_audit_modules.py  test_main.py  test_native_tools.py  test_runtime_extraction.py  test_schemas.py  test_session_state.py  test_skill_loader.py  test_unified_copilot.py  test_workflow_status.py
